ENABLE_TESTING()

INCLUDE(CMakeModules/CPM.cmake)

# Added Doctest as a Dependency
CPMADDPACKAGE(
        NAME DOCTEST
        GITHUB_REPOSITORY onqtam/doctest
        GIT_TAG 2.4.4
)

MACRO(HIPPY_FLEX_TEST_UNIT _NAME_TARGET _NAME_FILE)

    ADD_EXECUTABLE(${_NAME_TARGET} ${_NAME_FILE})
    SET_TARGET_PROPERTIES(${_NAME_TARGET} PROPERTIES CXX_STANDARD 17)
    TARGET_LINK_LIBRARIES(${_NAME_TARGET} PRIVATE doctest)
    TARGET_LINK_LIBRARIES(${_NAME_TARGET} PRIVATE Hippy::Flex)
    ADD_TEST(NAME ${_NAME_TARGET} COMMAND ${_NAME_TARGET})

ENDMACRO()

HIPPY_FLEX_TEST_UNIT(Hippy.Test.Absolute.Position HPAbsolutePositionTest.cpp)